# jwp-pms-v1

./: README.md  docker-compose.yml  jwp-pms-v1.code-workspace
backend/: .env.example  .gitignore  .pylint  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
backend/src/: __init__.py  diagnosis.py  main.py  test_import.py
backend/src/api/: __init__.py  auth.py  calendar.py  chat.py  dashboard.py  health.py  project.py  projects.py  system.py  task.py  uploads.py  user.py
backend/src/constants/: __init__.py  calendar.py  chat.py  project.py  system.py  task.py  user.py
backend/src/core/: __init__.py  base.py  config.py  constants.py  database.py  db_utils.py  dependencies.py  security.py
backend/src/models/: __init__.py  calendar.py  chat.py  file.py  project.py  task.py  user.py
backend/src/schemas/: __init__.py  auth.py  calendar.py  chat.py  common.py  dashboard.py  project.py  task.py  user.py
backend/src/services/: __init__.py  calendar.py  chat.py  dashboard.py  file.py  project.py  system.py  task.py  upload.py  user.py
backend/src/utils/: __init__.py  auth.py  exceptions.py  field_updater.py  helper.py  logger.py
backend/tests/: test_func_count.py
database/: tables.sql
frontend/: .env.example  .eslintrc.json  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx  setupProxy.js
frontend/src/components/: permission-gate.tsx  with-permissions.tsx
frontend/src/constants/: auth.ts  calendar.ts  chat.ts  common.ts  dashboard.ts  index.ts  permission.ts  permissions.ts  project.ts  report.ts  task.ts  user.ts
frontend/src/contexts/: auth-context.tsx  calendar-context.tsx  chat-context.tsx  permission-context.tsx  project-context.tsx  report-context.tsx  task-context.tsx  theme-context.tsx  user-context.tsx
frontend/src/hooks/: use-auth-state.ts  use-auth.ts  use-calendar-events.ts  use-calendar-view.ts  use-calendar.ts  use-chat.ts  use-dashboard.ts  use-permission-guards.ts  use-permission-state.ts  use-permissions.ts  use-project-attachments.ts  use-project-members.ts  use-project-search.ts  use-project-state.ts  use-projects.ts  use-report-charts.ts  use-report-export.ts  use-report-state.ts  use-reports.ts  use-task-kanban.ts  use-task-search.ts  use-task-state.ts  use-task-time-tracking.ts  use-tasks.ts  use-theme.ts  use-user-avatar.ts  use-user-search.ts  use-user-state.ts  use-users.ts  useAuth.ts  usePermissions.ts  useProjects.ts  useReports.ts  useTasks.ts  (+1 more)
(+117 files in other folders)
